fix: Add slight shadow to ensure that the loading message is visible even in dark mode on light backgrounds

--- a/packages/js-draw/src/Editor.scss
+++ b/packages/js-draw/src/Editor.scss
@@ -118,6 +118,8 @@
 	text-align: center;
 	font-size: 2em;
 
+	text-shadow: 0px 0px 1px var(--background-color-1);
+
 	bottom: 0;
 	left: 0;
 	right: 0;
